fix: fix main content and toc alignment bug

--- a/src/.vuepress/styles/config.scss
+++ b/src/.vuepress/styles/config.scss
@@ -17,3 +17,19 @@ $code-bg-color: (
   light: #ecf4fa,
   dark: #282c34,
 );
+
+$modern_pc: 1920px;
+
+// wide screen
+$pc: 1440px;
+
+$laptop: 1280px;
+
+// narrow desktop / iPad
+$pad: 959px;
+
+// wide mobile
+$tablet: 719px;
+
+// narrow mobile
+$mobile: 419px;
